--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
         <div class="color-container"></div>
 
+        <p class="copy-notice">Click on the hex value to copy to clipboard</p>
+
     </main>
 </body>
 </html>
