--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Select a color of your choice and generate its color scheme on the go">
+    <meta namw="author" content="Udeh Ifeanyi">
     <title>Coolor Scheme Generator</title>
 
     <!-- CSS Style  -->
@@ -14,6 +16,11 @@
 </head>
 <body>
     <main>
+        <div id="mode-switch">
+            <img src="moon.svg" alt="">
+        </div>
+
+
         <form name="form" action="">
             <fieldset>
                 <label  for="seed-color"></label>
@@ -34,7 +41,6 @@
                 </select>
             </fieldset>
            
-
             <button>Get color scheme</button>
         </form>
 
